# rubix-solver

./: .gitignore  CMakeLists.txt  README.md  config.cpp  cube.cpp  cube_solution.cpp  main.cpp  rubix-solver.cpp  rubix-solver.sln  rubix-solver.vcxproj  rubix-solver.vcxproj.filters  rubixsolver.cpp  rubixsolver.h  run.sh  solver.cpp  test.cpp  utils.cpp  vision.cpp
scripts/: build.sh  install.sh  run.sh
x64/Debug/: rubix-solver.exe.recipe  rubix-solver.ilk  rubix-solver.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/rubix-solver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rubix-solver.lastbuildstate
